--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0 " />
     <title>Vite + React</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link href="https://fonts.googleapis.com/css2?family=Ojuju&display=swap" rel="stylesheet">
     <style>
       .material-symbols-outlined {
         font-variation-settings:
@@ -13,6 +14,12 @@
         'wght' 300,
         'GRAD' 0,
         'opsz' 24
+      }
+      .ojuju-font {
+        font-family: "Ojuju", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
       }
       </style>
     <style>
