--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/The Coffee Place final.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0 " />
-    <title>Vite + React</title>
+    <title>The Coffee Place</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://fonts.googleapis.com/css2?family=Ojuju&display=swap" rel="stylesheet">
     <style>
